Modified text alignment in the form

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-#userBirthday {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-#userGender {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 
 body {
   background-color: #f0faf5;
@@ -14,9 +5,15 @@ body {
 
 .container {
   width: 50%;
+
 }
 
 .jumbotron {
 
   background-color: #007bff;
+  color: #ffffff;
+}
+
+form p {
+  text-align: justify;
 }
